Closed Bug 919994 Opened 12 years ago Closed 12 years ago

Fix bustage caused by Bug 919341 (Minimize the #includes in xpcom/ IDL files)

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 27.0

People

(Reporter: philip.chee, Assigned: philip.chee)

References

Details

Attachments

(1 file)

e:/builds/slave/c-cen-t-w32-ntly/build/mailnews/addrbook/src/nsAddbookProtocolHandler.cpp(140) : error C2027: use of undefined type 'nsIAsyncOutputStream' e:\builds\slave\c-cen-t-w32-ntly\build\objdir\mozilla\dist\include\nsIPipe.h(19) : see declaration of 'nsIAsyncOutputStream' e:/builds/slave/c-cen-t-w32-ntly/build/mailnews/addrbook/src/nsAddbookProtocolHandler.cpp(140) : error C2039: 'Close' : is not a member of 'nsCOMPtr<T>' with [ T=nsIAsyncOutputStream ]
Pushed bustage fix to comm-central: https://hg.mozilla.org/comm-central/rev/1d7c23a48fba
Patch as pushed.
Attachment #809145 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 27.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: