Bug 919994 Fix bustage caused by Bug 919341 (Minimize the #includes in xpcom/ IDL files) rs=bustage fix a=CLOSED TREE